--- a/templates/README.md_HEADER.j2
+++ b/templates/README.md_HEADER.j2
@@ -1,4 +1,4 @@
-# {{ package.name|replace("_", " ") }}
+# {{ package.name|replace("_", " ") }}&ensp;<sup><sup>[![View code][code-img]][code-url]</sup></sup>
 
 ### {{ package.description }}
 
