--- a/templates/badge.json.j2
+++ b/templates/badge.json.j2
@@ -2,7 +2,6 @@
 ---
 {
   "schemaVersion": 1,
-  "label": "{{ label }}",
-  "message": "{{ message }}",
-  "color": "{{ color }}"
+  "label": "to be overridden by url",
+  "message": "{{ message }}"
 }
