--- a/templates/make_dist.sh.j2
+++ b/templates/make_dist.sh.j2
@@ -8,7 +8,7 @@ packages="{% for subpackage in subpackages %}{{ subpackage.name }} {% endfor %}"
 base_dir="$PWD"
 
 for pkg in ${packages}; do
-  ./release-gap-package --skip-existing-release --srcdir ${base_dir}/${pkg} --webdir ${base_dir}/gh-pages/${pkg} --update-file ${base_dir}/gh-pages/update.g $@
+  ./release-gap-package --skip-existing-release --srcdir ${base_dir}/${pkg} --webdir ${base_dir}/gh-pages/${pkg} --update-script ${base_dir}/gh-pages/update.g $@
 done
 {% else %}
 ./release-gap-package --skip-existing-release $@
