Add ci_gaprc to prevent accidentally testing package versions distributed with GAP

--- a/templates/Tests.yml.j2
+++ b/templates/Tests.yml.j2
@@ -32,6 +32,7 @@ jobs:
           sudo apt update
           sudo apt dist-upgrade -y
           sudo apt install -y texlive-latex-extra{% for apt_package in (ci_ubuntu_additional_apt_packages | default([ ])) %} {{ apt_package }}{% endfor %}
+          cp ./{{ package.name }}/ci_gaprc /home/gap/.gap/gaprc
           git clone --depth 1 https://github.com/gap-packages/AutoDoc.git
         {%- for additional_repo in ci_additional_repositories_enriched %}
           git clone --depth 1 https://github.com/{% if "/" not in additional_repo %}homalg-project/{% endif %}{{ additional_repo }}.git
