--- a/templates/Tests.yml.j2
+++ b/templates/Tests.yml.j2
@@ -39,11 +39,18 @@ jobs:
         {%- endfor %}
           # set SOURCE_DATE_EPOCH for reproducible PDFs
           export SOURCE_DATE_EPOCH=0
+        {%- if ci_do_not_run_tests is not defined or not ci_do_not_run_tests %}
+          TERM=dumb make -C {{ package.name }} -j $(nproc) --output-sync ci-test
+        {%- else %}
+          TERM=dumb make -C {{ package.name }} -j $(nproc) --output-sync doc
+        {%- endif %}
         {%- for package_to_test in ci_packages_to_test %}
           TERM=dumb make -C {{ package_to_test }} -j $(nproc) --output-sync ci-test
         {%- endfor %}
+        {%- if ci_do_not_run_tests is not defined or not ci_do_not_run_tests %}
           cp ./{{ package.name }}/.codecov.yml ./
           curl -s https://codecov.io/bash | bash
+        {%- endif %}
           git config --global user.name "Bot"
           git config --global user.email "empty"
           cd {{ package.name }}
