--- a/templates/Tests.yml.j2
+++ b/templates/Tests.yml.j2
@@ -51,7 +51,7 @@ jobs:
         {%- if ci_do_not_run_tests is not defined or not ci_do_not_run_tests %}
           cp ./{{ package.name }}/.codecov.yml ./
           (cd {{ package.name }} && LANG=C.UTF-8 python3 process_coverage_ignored_lines.py)
-          curl -s https://codecov.io/bash | bash
+          [ "{% raw %}${{ matrix.image }}{% endraw %}" = "gapsystem/gap-docker-master" ] && ./{{ package.name }}/upload_codecov.sh
         {%- endif %}
           git config --global user.name "Bot"
           git config --global user.email "empty"
