--- a/templates/makefile.j2
+++ b/templates/makefile.j2
@@ -31,10 +31,12 @@ test-with-coverage: doc
 	gap --quitonbreak --cover stats tst/testall.g
 	echo 'LoadPackage("profiling"); OutputJsonCoverage("stats", "coverage.json");' | gap --quitonbreak
 
+{% if has_precompiled_categories %}
 test-with-coverage-without-precompiled-code: doc
 	gap --quitonbreak --cover stats_no_precompiled_code tst/testall_no_precompiled_code.g
 	echo 'LoadPackage("profiling"); OutputJsonCoverage("stats_no_precompiled_code", "coverage_no_precompiled_code.json");' | gap --quitonbreak
 
+{% endif %}
 test-spacing:
 	grep -R "[^ [\"]  " gap/*.gi && echo "Duplicate spaces found" && exit 1 || exit 0
 	grep -RE '[^ ] +$$' gap/* && echo "Trailing whitespace found" && exit 1 || exit 0
