--- a/templates/README.md_FOOTER.j2
+++ b/templates/README.md_FOOTER.j2
@@ -49,13 +49,16 @@ To obtain current versions of all dependencies, `git clone` (or `git pull` to up
 [tests-img]: https://github.com/homalg-project/{{ meta_package.name }}/workflows/Tests/badge.svg?branch=master
 [tests-url]: https://github.com/homalg-project/{{ meta_package.name }}/actions?query=workflow%3ATests+branch%3Amaster
 
+{% if is_meta_package %}
 [codecov-img]: https://codecov.io/gh/homalg-project/{{ meta_package.name }}/branch/master/graph/badge.svg
 [codecov-url]: https://codecov.io/gh/homalg-project/{{ meta_package.name }}
 
-{% if is_meta_package %}
 [code-img]: https://img.shields.io/badge/-View%20code-blue?logo=github
 [code-url]: https://github.com/homalg-project/{{ meta_package.name }}#top
 {% else %}
+[codecov-img]: https://codecov.io/gh/homalg-project/{{ meta_package.name }}/branch/master/graph/badge.svg?flag={{ package.name }}
+[codecov-url]: https://codecov.io/gh/homalg-project/{{ meta_package.name }}/tree/master/{{ package.name }}
+
 [code-img]: https://img.shields.io/badge/-View%20code-blue?logo=github
 [code-url]: https://github.com/homalg-project/{{ meta_package.name }}/tree/master/{{ package.name }}#top
 {% endif %}
