--- a/templates/upload_codecov.sh.j2
+++ b/templates/upload_codecov.sh.j2
@@ -23,4 +23,10 @@ shasum -a 256 -c codecov.SHA256SUM
 
 # execute
 chmod +x codecov
+{% if is_meta_package %}
+{% for doc_package in doc_packages -%}
+./codecov -Z -f "coverage*.json" -F {{ doc_package.name }}
+{% endfor %}
+{% else %}
 ./codecov -Z -f "coverage*.json"
+{% endif %}
