--- a/templates/100_LoadPackage.tst.j2
+++ b/templates/100_LoadPackage.tst.j2
@@ -3,6 +3,8 @@
 #
 # This file tests if the package can be loaded without errors or warnings.
 #
+# do not load suggested dependencies automatically
+gap> PushOptions( rec( OnlyNeeded := true ) );
 gap> package_loading_info_level := InfoLevel( InfoPackageLoading );;
 gap> SetInfoLevel( InfoPackageLoading, PACKAGE_ERROR );;
 {% for package_to_load in tests_packages_to_load %}
