--- a/templates/Tests.yml.j2
+++ b/templates/Tests.yml.j2
@@ -41,7 +41,7 @@ jobs:
           # set SOURCE_DATE_EPOCH for reproducible PDFs
           export SOURCE_DATE_EPOCH=0
           # build documentation of packages which we might want to reference, keep this in sync with `release-gap-package`
-        {%- for package_with_doc in ["CAP_project/CAP", "CAP_project/CompilerForCAP", "CAP_project/MonoidalCategories", "CAP_project/FreydCategoriesForCAP", "HigherHomologicalAlgebra/ToolsForHigherHomologicalAlgebra", "homalg_project/homalg", "homalg_project/Modules", "Toposes" ] %}
+        {%- for package_with_doc in ["CAP_project/CAP", "CAP_project/CompilerForCAP", "CAP_project/MonoidalCategories", "CAP_project/FreydCategoriesForCAP", "CartesianCategories", "HigherHomologicalAlgebra/ToolsForHigherHomologicalAlgebra", "homalg_project/homalg", "homalg_project/Modules", "Toposes" ] %}
           [ -d "{{ package_with_doc }}" ] && make -C "{{ package_with_doc }}" doc
         {%- endfor %}
         {%- if ci_do_not_run_tests is not defined or not ci_do_not_run_tests %}
