--- a/templates/upload_codecov.sh.j2
+++ b/templates/upload_codecov.sh.j2
@@ -23,9 +23,10 @@ shasum -a 256 -c codecov.SHA256SUM
 
 # execute
 chmod +x codecov
-./codecov -Z || ./codecov -Z || ./codecov -Z
 {% if is_meta_package %}
 {% for doc_package in doc_packages -%}
 ./codecov -Z -F {{ doc_package.name }} || ./codecov -Z -F {{ doc_package.name }} || ./codecov -Z -F {{ doc_package.name }}
 {% endfor %}
+{% else %}
+./codecov -Z || ./codecov -Z || ./codecov -Z
 {% endif %}
