--- a/templates/Tests.yml.j2
+++ b/templates/Tests.yml.j2
@@ -43,12 +43,12 @@ jobs:
           [ -d "{{ package_with_doc }}" ] && make -C "{{ package_with_doc }}" doc
         {%- endfor %}
         {%- if ci_do_not_run_tests is not defined or not ci_do_not_run_tests %}
-          TERM=dumb make -C {{ package.name }} -j $(nproc) --output-sync ci-test
+          make -C {{ package.name }} -j $(nproc) --output-sync ci-test
         {%- else %}
-          TERM=dumb make -C {{ package.name }} -j $(nproc) --output-sync doc
+          make -C {{ package.name }} -j $(nproc) --output-sync doc
         {%- endif %}
         {%- for package_to_test in ci_packages_to_test %}
-          TERM=dumb make -C {{ package_to_test }} -j $(nproc) --output-sync ci-test
+          make -C {{ package_to_test }} -j $(nproc) --output-sync ci-test
         {%- endfor %}
         {%- if ci_do_not_run_tests is not defined or not ci_do_not_run_tests %}
           cp ./{{ package.name }}/.codecov.yml ./
