--- a/templates/Tests.yml.j2
+++ b/templates/Tests.yml.j2
@@ -26,6 +26,7 @@ jobs:
         with:
           # the persisted token interferes with the subsplit token used below
           persist-credentials: false
+          fetch-depth: 0
       - run: cp -a $GITHUB_WORKSPACE /home/gap/.gap/pkg/
       - run: |
           export HOME="/home/gap"
@@ -53,14 +54,13 @@ jobs:
         {%- for package_to_test in ci_packages_to_test %}
           make -C {{ package_to_test }} -j $(nproc) --output-sync ci-test
         {%- endfor %}
+          cd {{ package.name }}
         {%- if ci_do_not_run_tests is not defined or not ci_do_not_run_tests %}
-          cp ./{{ package.name }}/.codecov.yml ./
-          (cd {{ package.name }} && LANG=C.UTF-8 python3 process_coverage.py)
-          [ "$GITHUB_EVENT_NAME" != "schedule" ] && [ "{% raw %}${{ matrix.image }}{% endraw %}" = "ghcr.io/homalg-project/gap-docker-master:latest" ] && ./{{ package.name }}/upload_codecov.sh
+          LANG=C.UTF-8 python3 process_coverage.py
+          [ "$GITHUB_EVENT_NAME" != "schedule" ] && [ "{% raw %}${{ matrix.image }}{% endraw %}" = "ghcr.io/homalg-project/gap-docker-master:latest" ] && ./upload_codecov.sh
         {%- endif %}
           git config --global user.name "Bot"
           git config --global user.email "empty"
-          cd {{ package.name }}
           CUR_SHA=$(git rev-parse --verify HEAD)
         {%- if ci_automated_release is not defined or ci_automated_release %}
           if [ "{% raw %}${{ matrix.image }}{% endraw %}" = "ghcr.io/homalg-project/gap-docker:latest" ] && [ "$CUR_SHA" = "$(git rev-parse origin/master)" ] && [ $(dirname "$GITHUB_REPOSITORY") = "homalg-project" ]; then \
@@ -69,8 +69,7 @@ jobs:
             git checkout master; \
             LANG=C.UTF-8 ./make_dist.sh --token "{% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}"; \
       {%- if is_meta_package %}
-            # publish subsplits (fetch all history first)
-            git fetch --unshallow; \
+            # publish subsplits
         {%- for subpackage in subpackages %}
 		  {%- if subpackage.has_subsplit is defined and subpackage.has_subsplit %}
             git subtree split --prefix={{ subpackage.name }} -b {{ subpackage.name }}-split && git push https://homalg-project:{% raw %}${{ secrets.SUBSPLIT_PUSH_SECRET }}{% endraw %}@github.com/homalg-project/{{ subpackage.name }} {{ subpackage.name }}-split:master; \
