--- a/templates/Tests.yml.j2
+++ b/templates/Tests.yml.j2
@@ -42,9 +42,9 @@ jobs:
           sudo apt install -y{% for apt_package in ci_ubuntu_additional_apt_packages %} {{ apt_package }}{% endfor %}
         {%- endif %}
           cp ./{{ package.name }}/ci_gaprc /home/gap/.gap/gaprc
-          git clone --depth 1 https://github.com/gap-packages/AutoDoc.git
+          git clone --depth 1 -vv https://github.com/gap-packages/AutoDoc.git
         {%- for additional_repo in ci_additional_repositories_enriched %}
-          git clone --depth 1 https://github.com/{% if "/" not in additional_repo %}homalg-project/{% endif %}{{ additional_repo }}.git
+          git clone --depth 1 -vv https://github.com/{% if "/" not in additional_repo %}homalg-project/{% endif %}{{ additional_repo }}.git
         {%- endfor %}
           # set SOURCE_DATE_EPOCH for reproducible PDFs
           export SOURCE_DATE_EPOCH=0
