--- a/templates/Tests.yml.j2
+++ b/templates/Tests.yml.j2
@@ -46,9 +46,7 @@ jobs:
         {%- for additional_repo in ci_additional_repositories_enriched %}
           git clone --depth 1 -vv https://github.com/{% if "/" not in additional_repo %}homalg-project/{% endif %}{{ additional_repo }}.git
         {%- endfor %}
-          # set SOURCE_DATE_EPOCH for reproducible PDFs
-          export SOURCE_DATE_EPOCH=0
-          # build documentation of packages which we might want to reference, keep this in sync with `release-gap-package`
+          # build documentation of packages which we might want to reference, keep this in sync with `dev/.release`
         {%- for package_with_doc in ["CAP_project/CAP", "CAP_project/CompilerForCAP", "CAP_project/MonoidalCategories", "CAP_project/CartesianCategories", "CAP_project/FreydCategoriesForCAP", "HigherHomologicalAlgebra/ToolsForHigherHomologicalAlgebra", "homalg_project/homalg", "homalg_project/Modules", "Toposes" ] %}
           [ -d "{{ package_with_doc }}" ] && make -C "{{ package_with_doc }}" doc
         {%- endfor %}
