--- a/templates/make_dist.sh.j2
+++ b/templates/make_dist.sh.j2
@@ -8,8 +8,8 @@ packages="{% for subpackage in subpackages %}{{ subpackage.name }} {% endfor %}"
 base_dir="$PWD"
 
 for pkg in ${packages}; do
-  ./dev/release-gap-package --skip-existing-release --srcdir ${base_dir}/${pkg} --webdir ${base_dir}/gh-pages/${pkg} --update-script ${base_dir}/gh-pages/update.g $@
+  ./dev/release-gap-package --skip-existing-release --srcdir ${base_dir}/${pkg} --webdir ${base_dir}/gh-pages/${pkg} --update-script ${base_dir}/gh-pages/update.g --release-script ${base_dir}/dev/.release $@
 done
 {% else %}
-./dev/release-gap-package --skip-existing-release $@
+./dev/release-gap-package --skip-existing-release --release-script dev/.release $@
 {% endif %}
