--- a/templates/Tests.yml.j2
+++ b/templates/Tests.yml.j2
@@ -68,9 +68,9 @@ jobs:
           CUR_SHA=$(git rev-parse --verify HEAD)
           git fetch origin gh-pages
           git worktree add gh-pages/ gh-pages || (echo "There was an error. Make sure there is a branch named 'gh-pages'. See https://github.com/homalg-project/PackageJanitor#error-there-was-an-error-make-sure-there-is-a-branch-named-gh-pages"; exit 1)
-          git checkout master
         {%- if ci_automated_release is not defined or ci_automated_release %}
           if [ "{% raw %}${{ matrix.image }}{% endraw %}" = "ghcr.io/homalg-project/gap-docker:latest" ] && [ "$CUR_SHA" = "$(git rev-parse origin/master)" ] && [ $(dirname "$GITHUB_REPOSITORY") = "homalg-project" ]; then \
+            git checkout master; \
             LANG=C.UTF-8 ./dev/make_dist.sh --token "{% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}"; \
       {%- if is_meta_package %}
             # publish subsplits
